# md2pdf-app

./: .gitignore  MANIFEST.in  README.md  TEMPLATE_SPEC.md  build.sh  install.sh  pyproject.toml  setup.py
examples/: basic-document.md  cover-letter.md  letter-template.md  recipients.csv  references.bib  sample-report.md
md2pdf/: __init__.py  __main__.py  cli.py  converter.py
templates/: basic-template.typ  letter-template.typ  report-template.typ
